fixed navbar also extra view spacing added LandingPage

--- a/react-stockx-portfolio/src/styles.css
+++ b/react-stockx-portfolio/src/styles.css
@@ -16,14 +16,3 @@
  }
 
 
-.nav-item>a{
-    color:lightblue;
-}
-
-.nav-item>a:hover{
-    color:rgb(0, 132, 255)
-}
-
-.nav-item>a>.active{
-    color:purple;
-}
